fixed nav bar on mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -356,7 +356,7 @@ a:hover {
         background-color: #1f1027;
         width: 100%;
         flex-direction: column;
-        align-items: center;
+        align-items: right;
         display: none;
     }
 
